--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>logo_contaq_no_bg.png" />
+    <link rel="icon" href="<%= BASE_URL %>logo_LFD_no_bg.png" />
     <title>Giornata del sostenitore</title>
   </head>
   <body>
